--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
 					<div class="header__column">
 						<div class="header__menu menu">
 							<div class="menu__icon"><span></span></div>
-							<div class="menu__body">
+							<nav class="menu__body">
 								<ul class="menu__list">
 									<li class="menu__item">
 										<span class="menu__arrow"></span>
@@ -98,7 +98,7 @@
 										<a href="#" class="menu__link"><span>Contacts</span></a>
 									</li>
 								</ul>
-							</div>
+							</nav>
 						</div>
 
 					</div>
@@ -807,7 +807,8 @@
 								<a href="#" class="news__item item-news">
 									<div class="item-news__img ibg"><img src="img/roadmap_bg.png" alt="news_image"></div>
 									<div class="item-news__category item-news__category-g">Analysis</div>
-									<div class="item-news__text">Text: Coinbase Crypto Exchange To Roll Out Long-Awaited SegWit Upgrade In ‘Few Weeks’.</div>
+									<div class="item-news__text">Text: Coinbase Crypto Exchange To Roll Out Long-Awaited SegWit
+										Upgrade In ‘Few Weeks’.</div>
 									<div class="item-news__date">December 12, 2017</div>
 								</a>
 							</div>
@@ -818,7 +819,8 @@
 					<div class="digital__container container">
 						<div class="digital__header">
 							<h2 class="digital__title">Bitmin Private <span>Digital Currency</span></h2>
-							<div class="digital__text">Bitmin is a secure, private, and untraceable cryptocurrency. It is open-source and accessible to all.</div>
+							<div class="digital__text">Bitmin is a secure, private, and untraceable cryptocurrency. It is
+								open-source and accessible to all.</div>
 						</div>
 						<button class="digital__button btn">Get started</button>
 						<a href="tel:+1200989081" class="digital__call">call us : +(1200) 989 - 081</a>
@@ -827,6 +829,46 @@
 				</section>
 			</div>
 			<footer class="footer">
+				<div class="footer__container container">
+					<div class="footer__top top-footer">
+						<div class="top-footer__column">
+							<a href="#" class="top-footer__logo">
+								<img src="img/icons/footer_logo.png" alt="logo" class="top-footer__img">
+								<span class="top-footer__text">Bitmin</span>
+							</a>
+						</div>
+						<div class="top-footer__column">
+							<nav class="footer__menu menu-footer">
+								<ul class="menu-footer__list">
+									<li class="menu-footer__item">
+										<a href="#" class="menu-footer__link">Help</a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="#" class="menu-footer__link">FAQ<span>s</span></a>
+									</li>
+									<li class="menu-footer__item">
+										<a href="#" class="menu-footer__link">History</a>
+									</li>
+									<li class="menu-footer__item menu-footer__item-border">
+										<a href="#" class="menu-footer__link">Oline Support</a>
+									</li>
+									<li class="menu-footer__item">
+										<span class="menu-footer__arrow"></span>
+										<a href="#" class="menu-footer__link menu-footer__link-arrow">ENG</a>
+										<ul class="menu-footer__sublist">
+											<li class="menu-footer__subitem">
+												<a href="#" class="menu-footer__sublink">UKR</a>
+											</li>
+											<li class="menu-footer__subitem">
+												<a href="#" class="menu-footer__sublink">ESP</a>
+											</li>
+										</ul>
+									</li>
+								</ul>
+							</nav>
+						</div>
+					</div>
+				</div>
 			</footer>
 		</main>
 	</div>
