--- a/src/index.html
+++ b/src/index.html
@@ -868,6 +868,83 @@
 							</nav>
 						</div>
 					</div>
+					<div class="footer__bottom bottom-footer">
+						<div class="bottom-footer__column">
+							<div class="bottom-footer__nav nav-footer">
+								<div class="nav-footer__column">
+									<nav class="nav-footer__body">
+										<div class="nav-footer__title">Software</div>
+										<ul class="nav-footer__list">
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Bitmin Core</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Horizon API</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Tools</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Libraries</a>
+											</li>
+										</ul>
+									</nav>
+								</div>
+								<div class="nav-footer__column"><nav class="nav-footer__body">
+										<div class="nav-footer__title">Community and Help</div>
+										<ul class="nav-footer__list">
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Community</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Blog</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Teams</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Partners Directory</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Developer Bounties</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Marketing Bounties</a>
+											</li>
+										</ul>
+									</nav></div>
+								<div class="nav-footer__column"><nav class="nav-footer__body">
+										<div class="nav-footer__title">Contact Information</div>
+										<ul class="nav-footer__list">
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Technical Reference</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Catapult Whitepaper</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Apostille Whitepaper</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Radicalizing the Equity</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Markets</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Clients</a>
+											</li>
+											<li class="nav-footer__item">
+												<a href="#" class="nav-footer__link">Node Explorer</a>
+											</li>
+										</ul>
+									</nav></div>
+							</div>
+						</div>
+						<div class="bottom-footer__column">
+							<div class="bottom-footer__rights">© 2018 Bitmin . All Rights Reserved</div>
+						</div>
+					</div>
 				</div>
 			</footer>
 		</main>
