--- a/src/index.html
+++ b/src/index.html
@@ -872,8 +872,8 @@
 						<div class="bottom-footer__column">
 							<div class="bottom-footer__nav nav-footer">
 								<div class="nav-footer__column">
-									<nav class="nav-footer__body">
-										<div class="nav-footer__title">Software</div>
+									<nav data-spollers="538,max" class="nav-footer__body">
+										<div data-spoller class="nav-footer__title">Software</div>
 										<ul class="nav-footer__list">
 											<li class="nav-footer__item">
 												<a href="#" class="nav-footer__link">Bitmin Core</a>
@@ -890,8 +890,9 @@
 										</ul>
 									</nav>
 								</div>
-								<div class="nav-footer__column"><nav class="nav-footer__body">
-										<div class="nav-footer__title">Community and Help</div>
+								<div class="nav-footer__column">
+									<nav data-spollers="538,max" class="nav-footer__body">
+										<div data-spoller class="nav-footer__title nav-footer__title-hot">Community and Help</div>
 										<ul class="nav-footer__list">
 											<li class="nav-footer__item">
 												<a href="#" class="nav-footer__link">Community</a>
@@ -912,9 +913,11 @@
 												<a href="#" class="nav-footer__link">Marketing Bounties</a>
 											</li>
 										</ul>
-									</nav></div>
-								<div class="nav-footer__column"><nav class="nav-footer__body">
-										<div class="nav-footer__title">Contact Information</div>
+									</nav>
+								</div>
+								<div class="nav-footer__column">
+									<nav data-spollers="538,max" class="nav-footer__body">
+										<div data-spoller class="nav-footer__title">Contact Information</div>
 										<ul class="nav-footer__list">
 											<li class="nav-footer__item">
 												<a href="#" class="nav-footer__link">Technical Reference</a>
@@ -938,11 +941,12 @@
 												<a href="#" class="nav-footer__link">Node Explorer</a>
 											</li>
 										</ul>
-									</nav></div>
+									</nav>
+								</div>
 							</div>
 						</div>
 						<div class="bottom-footer__column">
-							<div class="bottom-footer__rights">© 2018 Bitmin . All Rights Reserved</div>
+							<div class="bottom-footer__rights"><span>©</span> 2018 Bitmin . All Rights Reserved</div>
 						</div>
 					</div>
 				</div>
