--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 								<ul class="menu__list">
 									<li class="menu__item">
 										<span class="menu__arrow"></span>
-										<a href="#" class="menu__link menu__link-arrow"><span>Home</span></a>
+										<a data-goto=".intro" href="#intro" class="menu__link menu__link-arrow"><span>Home</span></a>
 										<ul class="menu__sublist">
 											<li class="menu__subitem">
 												<a href="#" class="menu__sublink"><span>Home</span></a>
@@ -60,7 +60,7 @@
 									</li>
 									<li class="menu__item">
 										<span class="menu__arrow"></span>
-										<a href="#" class="menu__link menu__link-arrow"><span>About</span></a>
+										<a data-goto=".price" href="#price" class="menu__link menu__link-arrow"><span>About</span></a>
 										<ul class="menu__sublist">
 											<li class="menu__subitem">
 												<a href="#" class="menu__sublink">About</a>
@@ -75,7 +75,7 @@
 									</li>
 									<li class="menu__item">
 										<span class="menu__arrow"></span>
-										<a href="#" class="menu__link menu__link-arrow"><span>Products</span></a>
+										<a data-goto=".promotions" href="#promotions" class="menu__link menu__link-arrow"><span>Products</span></a>
 										<ul class="menu__sublist">
 											<li class="menu__subitem">
 												<a href="#" class="menu__sublink">Products</a>
@@ -89,13 +89,13 @@
 										</ul>
 									</li>
 									<li class="menu__item">
-										<a href="#" class="menu__link"><span>Features</span></a>
+										<a data-goto=".why" href="#why" class="menu__link"><span>Features</span></a>
 									</li>
 									<li class="menu__item">
-										<a href="#" class="menu__link"><span>RoadMap</span></a>
+										<a data-goto=".roadmap" href="#roadmap" class="menu__link"><span>RoadMap</span></a>
 									</li>
 									<li class="menu__item">
-										<a href="#" class="menu__link"><span>Contacts</span></a>
+										<a data-goto=".digital" href="#digital" class="menu__link"><span>Contacts</span></a>
 									</li>
 								</ul>
 							</nav>
@@ -111,7 +111,7 @@
 				</div>
 			</header>
 			<div class="page__content">
-				<section class="intro">
+				<section id="intro" class="intro">
 					<div class="intro__container container">
 						<h1 class="intro__title">Smart crytocurrency <br> for gaming & stock trading </h1>
 						<div class="intro__row">
@@ -123,7 +123,7 @@
 					</div>
 					<div class="intro__bg ibg"><img src="img/main_bg.png" alt="main_bg"></div>
 				</section>
-				<section class="price">
+				<section id="price" class="price">
 					<div class="price__container container">
 						<div class="price__header">
 							<h2 class="price__title title">Cryptocurrency Price Capitalizations</h2>
@@ -454,7 +454,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="promotions">
+				<section id="promotions" class="promotions">
 					<div class="promotions__header">
 						<h2 class="promotions__title title title-w">Promotions Announcement</h2>
 						<div class="promotions__text text text-w">Cras mattis consectetur purus sit amet fermentum. Cras justo
@@ -522,7 +522,7 @@
 					</div>
 					<button class="promotions__button btn">View all announcement</button>
 				</section>
-				<section class="why">
+				<section id="why" class="why">
 					<div class="why__top top-why">
 						<div class="top-why__column">
 							<div class="top-why__img"><img src="img/why/shape_01.png" alt="shape"></div>
@@ -597,7 +597,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="roadmap">
+				<section id="roadmap" class="roadmap">
 					<div class="roadmap__container container">
 						<div class="roadmap__header">
 							<h2 class="roadmap__title title title-w">Roadmap</h2>
@@ -815,7 +815,7 @@
 						</div>
 					</div>
 				</section>
-				<section class="digital">
+				<section id="digital" class="digital">
 					<div class="digital__container container">
 						<div class="digital__header">
 							<h2 class="digital__title">Bitmin Private <span>Digital Currency</span></h2>
