--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
 
 <body>
 	<!-- start 17.08.22 12:00 -->
+	<!-- final 29.08.22 12:00 -->
 	<div class="wrapper">
 		<main class="page">
 			<header class="header">
