--- a/src/index.html
+++ b/src/index.html
@@ -855,7 +855,7 @@
 									</li>
 									<li class="menu-footer__item">
 										<span class="menu-footer__arrow"></span>
-										<a href="#" class="menu-footer__link menu-footer__link-arrow">ENG</a>
+										<div class="menu-footer__link menu-footer__link-arrow">ENG</div>
 										<ul class="menu-footer__sublist">
 											<li class="menu-footer__subitem">
 												<a href="#" class="menu-footer__sublink">UKR</a>
